--- a/assets/scss/responsive/_large.scss
+++ b/assets/scss/responsive/_large.scss
@@ -63,7 +63,7 @@
     top: 60px;
     max-height: max-content;
     width: 25%;
-    margin-bottom: 0;
+    margin-top: 0;
     padding-top: 60px;
     z-index: 1;
   }
